Repositioned animation to help prevent overlapping with text output. Fixed annyang related bug.

--- a/web/css/davis.css
+++ b/web/css/davis.css
@@ -254,7 +254,7 @@
 	}
 
 	.davisvisual__container {
-		margin-top: 100px;
+		margin-top: 450px;
 		position: relative;
 		min-height: 250px;
 	}
